--- a/TextRPG_Supplemental.vcxproj.filters
+++ b/TextRPG_Supplemental.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
